# esp32_watch

./: LICENSE  README.md
libraries/: lv_conf.h
libraries/TFT_eSPI/: User_Setup.h
libraries/TFT_eSPI/User_Setups/: Setup200_GC9A01.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
libraries/ui/src/screens/: ui_AlarmClock.c  ui_AlarmDisplay.c  ui_Alarmcheck.c  ui_Function_Screen.c  ui_HomeAutomation.c  ui_Screen1.c  ui_StopWatchSD.c  ui_TabStop.c  ui_ringRing.c
ui/: clock_trck.cpp  clock_trck.h  display_func.cpp  display_func.h  ui.ino  wireless_connect.cpp  wireless_connect.h
